# Referrer

backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend-v2/: pyproject.toml
backend-v2/root/posts/: models.py  serializers.py  urls.py  views.py
backend-v2/root/posts/migrations/: 0001_initial.py
backend-v2/root/root/: settings.py  urls.py
backend-v2/root/skills/: models.py
backend-v2/root/skills/migrations/: 0001_initial.py  0002_remove_skills_id_alter_skills_skill.py
backend-v2/root/users/: authentication.py  models.py  serializers.py  urls.py  views.py
backend-v2/root/users/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_last_login_and_more.py
backend-v2/root/users/templates/: password_reset_email.html
backend/referrer_backend/: manage.py
backend/referrer_backend/posts/: models.py  serializers.py  urls.py  views.py
backend/referrer_backend/posts/migrations/: 0001_initial.py
backend/referrer_backend/referrer_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/referrer_backend/skills/: admin.py  models.py
backend/referrer_backend/user_auth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/root/: .gitignore
backend/root/posts/: models.py  serializers.py  urls.py  views.py
backend/root/root/: graphql_decorator.py  schema.py  settings.py  urls.py  views.py
backend/root/skills/: models.py
backend/root/users/: middleware.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/scripts/: build.sh  server.sh
frontend/: .dockerignore  .eslintrc.json  (+5 more)
(+175 files in other folders)
